<resources>
    <string name="app_name">Lendz</string>
    <string name="user_profile_full_name_header">Name</string>
    <string name="user_profile_email_header">Email</string>
    <string name="user_profile_phone_number_header">Phone Number</string>
    <string name="user_profile_photo_content_description">User profile photo</string>
    <string name="user_profile_edit">Edit</string>
    <string name="user_profile_username_header">Username</string>
    <string name="user_profile_save">Save</string>
    <string name="user_profile_edit_failed">Failed to update user profile information.</string>
    <string name="book_edit_failed">Failed to update book details.</string>
    <string name="app_logo_content_description">Lendz Logo</string>
    <string name="login_welcome_message">Welcome to Lendz!</string>
    <string name="login_header">Login</string>
    <string name="login_userName_editText_hint">Username</string>
    <string name="login_password_editText_hint">Password</string>
    <string name="sign_password_editText_hint">Password (at least 6 characters)</string>
    <string name="show_password">Show password</string>
    <string name="dont_have_an_account">"Don't have an account?"</string>
    <string name="login_page_signUp_message">Sign up</string>
    <string name="login_button_text">LOGIN</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="signup_full_name_hint">Full name</string>
    <string name="signup_phone_number_hint">Phone number</string>
    <string name="signup_email_address_hint">Email address</string>
    <string name="sign_up_button_text">Sign Up</string>

    <string name="google_maps_API_key">AIzaSyDdULVvHA9tOu8OKbdSPuavcKXjFJ6pGr0</string>

    <string name="add_book">Add Book</string>
    <string name="isbn">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="available">Available</string>
    <string name="requested">Requested</string>
    <string name="accepted">Accepted</string>
    <string name="borrowed">Borrowed</string>
    <string name="declined">Declined</string>
    <string name="tap_to_add_photo">Tap to add photo</string>
    <string name="delete_book_photo">Delete Book Photo</string>
    <string name="book_description">Book Description</string>
    <string name="add_book_photo">Add Photo</string>
    <string name="owner">Owner</string>
    <string name="EditBookAuthor">Author</string>
    <string name="EditBookDetailsTitle">Title</string>
    <string name="EditBookDescriptionHead">Book Description</string>
    <string name="EditBookAuthorHeader">Author</string>
    <string name="EditBookISBNHeader">ISBN</string>
    <string name="editBook">Edit Book</string>
    <string name="deleteBook">Delete</string>
    <string name="borrow_tab">Borrow</string>
    <string name="myBooks_tab">My Books</string>
    <string name="notifications_tab">Notifications</string>
    <string name="profile_tab">Profile</string>
    <string name="book_deletion_failed">Book Deletion Failed</string>
    <string name="Back">ViewBookBack</string>
    <string name="Exit">viewBack</string>
    <string name="search_failed">Failed to perform search.</string>
    <string name="searching_in_progress">Searching…</string>
    <string name="book_requested_notification_text">%1$s has requested your book %2$s.</string>
    <string name="request">Request</string>
    <string name="view_requests">View Requests</string>
    <string name="accept_request">Accept Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="request_accepted_notification_text">%1$s accepted your request for %2$s.</string>
    <string name="request_declined_notification_text">%1$s declined your request for %2$s.</string>
    <string name="book_photo">Book Photo</string>
    <string name="failed_to_get_notifications">Failed to get notifications.</string>
    <string name="failed_to_get_book_description">Failed to get book description: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_notifications">No notifications</string>
    <string name="waiting_for_borrower_to_pick_up_book">Waiting for borrower to pick up book</string>
    <string name="your_request_was_accepted">Your request was accepted</string>
    <string name="you_accepted_a_request">You accepted a request from %1$s</string>
    <string name="your_book_is_borrowed">Your book is borrowed by %1$s</string>
    <string name="you_are_borrowing_this_book">You are borrowing this book</string>
    <string name="book_borrowed_by_someone_else">This book is currently borrowed by someone else</string>
    <string name="confirm_pick_up">Confirm Pick-Up</string>
    <string name="cancel_pick_up">Cancel Pick-Up</string>
    <string name="confirm_return">Confirm Return</string>
    <string name="view_location">View Location</string>
    <string name="log_out">Log Out</string>
    <string name="no_borrowed_books">No borrowed books</string>
    <string name="no_owned_books">No owned books</string>
    <string name="pending_request_exists">You have a pending request</string>
    <string name="owned_by">Owned by %1$s</string>
    <string name="isbn_does_not_match">The book you scanned has a non-matching ISBN of %1$s.</string>
    <string name="scan_the_barcode">Scan the barcode of the book</string>
    <string name="already_sent_a_request">You already sent a request</string>
    <string name="clear_all">Clear all</string>
    <string name="failed_to_clear_notifications">Failed to clear notifications: %1$s</string>
    <string name="channel_book_requested">Book Requested</string>
    <string name="channel_request_acknowledged">Request Acknowledged</string>
    <string name="no_pending_requests">No pending requests for this book</string>
    <string name="some_pending_requests">%1$d pending requests for this book</string>
    <string name="decline_this_request_prompt">Do you want to decline this request?</string>
    <string name="accept_this_request_prompt">Do you want to accept this request?</string>
</resources>